# benchmark_mri_pnp

./: .gitignore  README.rst  gridsearch.yaml  objective.py  objective_fastmri.py  objective_old.py  optuna_benchopt.py  pyproject.toml  test.ipynb
benchmark_utils/: cartesian_sampling.py  drunet.py  druneteq.py  gradients.py  init_solver.py  kspace_sampling.py  metrics.py  physic.py  physics.py  precond.py  smaps.py  spiral_factory.py  sure_prox.py  utils.py
datasets/: brainweb-spirals.py  brainweb.py  brainweb_sparkling.py  fastmri.py  pysap-sample.py
plotting/: final_results_grid.py  final_results_table.py  plot_convergence.py  plot_image_grid.py  plot_trajectory.py  table.py  table_paper.py
solvers/: FISTA_fMRI.py  PnP.py  _adjoint.py  _cs.py  adjoint.py  baseline.py  compress_sensing.py  condat-vu.py  fista.py  hqs.py  ncpdnet.py  pnp.py  pogm.py  pseudo_inverse.py  synthesis.py  zero-order-solver.py
